20080101
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/12/31 10:41:31
     [readconf.c servconf.c]
     Prevent strict-aliasing warnings on newer gcc versions.  bz #1355, patch
     from Dmitry V. Levin, ok djm@

20071231
 - (dtucker) [configure.ac openbsd-compat/glob.{c,h}] Bug #1407: force use of
   builtin glob implementation on Mac OS X.  Based on a patch from
   vgiffin at apple.

20071229
 - (dtucker) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2007/12/12 05:04:03
     [sftp.c]
     unbreak lls command and add a regress test that would have caught the
     breakage; spotted by mouring@
   - dtucker@cvs.openbsd.org 2007/12/27 14:22:08
     [servconf.c canohost.c misc.c channels.c sshconnect.c misc.h ssh-keyscan.c
      sshd.c]
     Add a small helper function to consistently handle the EAI_SYSTEM error
     code of getaddrinfo.  Prompted by vgiffin at apple com via bz #1417.
     ok markus@ stevesk@
   - dtucker@cvs.openbsd.org 2007/12/28 15:32:24
     [clientloop.c serverloop.c packet.c]
     Make SSH2_MSG_UNIMPLEMENTED and SSH2_MSG_IGNORE messages reset the
     ServerAlive and ClientAlive timers.  Prevents dropping a connection
     when these are enabled but the peer does not support our keepalives.
     bz #1307, ok djm@.
   - dtucker@cvs.openbsd.org 2007/12/28 22:34:47
     [clientloop.c]
     Use the correct packet maximum sizes for remote port and agent forwarding.
     Prevents the server from killing the connection if too much data is queued
     and an excessively large packet gets sent.  bz #1360, ok djm@.

20071202
 - (dtucker) [configure.ac] Enable -fstack-protector-all on systems where
   gcc supports it.  ok djm@
 - (dtucker) [scp.c] Update $OpenBSD tag missing from rev 1.175 and remove
   leftover debug code.
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/10/29 00:52:45
     [auth2-gss.c]
     Allow build without -DGSSAPI; ok deraadt@
     (Id sync only, Portable already has the ifdefs)